--- a/index.html
+++ b/index.html
@@ -1210,18 +1210,21 @@
             const particleCount = 150;
             const maxDistance = 150;
 
-            // Fixed virtual canvas size for particle sampling
-            const VIRTUAL_WIDTH = 1920;
-            const VIRTUAL_HEIGHT = 1080;
+            // Virtual canvas size proportional to actual screen width
+            let VIRTUAL_WIDTH = window.innerWidth;
+            let VIRTUAL_HEIGHT = window.innerHeight;
 
             function setCanvasSize() {
                 canvas.width = window.innerWidth;
                 canvas.height = window.innerHeight;
+                // Update virtual dimensions to match screen proportions
+                VIRTUAL_WIDTH = window.innerWidth;
+                VIRTUAL_HEIGHT = window.innerHeight;
             }
 
             class Particle {
                 constructor() {
-                    // Position in virtual space (fixed 1920x1080)
+                    // Position in virtual space (proportional to screen width)
                     this.virtualX = Math.random() * VIRTUAL_WIDTH;
                     this.virtualY = Math.random() * VIRTUAL_HEIGHT;
                     this.radius = Math.random() * 2 + 1;
