--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             display: flex;
         }
 
-        /* Particle Canvas Background */
+        /* Particle Canvas Background (Desktop Only) */
         #particle-canvas {
             position: fixed;
             top: 0;
@@ -248,6 +248,13 @@
             z-index: -1;
             opacity: 0.6;
             pointer-events: none;
+        }
+
+        /* Hide particle canvas on mobile */
+        @media (max-width: 767px) {
+            #particle-canvas {
+                display: none;
+            }
         }
 
         /* Hero Animation */
@@ -1199,28 +1206,34 @@
         document.addEventListener('DOMContentLoaded', loadArticles);
 
         // ============================================================
-        // Particle Canvas Animation
+        // Particle Canvas Animation (Desktop Only)
         // ============================================================
 
-        (function() {
-            const canvas = document.getElementById('particle-canvas');
-            const ctx = canvas.getContext('2d');
+        // Detect mobile device
+        const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)
+            || window.innerWidth < 768;
 
-            let particles = [];
-            const particleCount = 150;
-            const maxDistance = 150;
+        // Only initialize particles on desktop
+        if (!isMobile) {
+            (function() {
+                const canvas = document.getElementById('particle-canvas');
+                const ctx = canvas.getContext('2d');
 
-            // Virtual canvas size proportional to actual screen width
-            let VIRTUAL_WIDTH = window.innerWidth;
-            let VIRTUAL_HEIGHT = window.innerHeight;
+                let particles = [];
+                const particleCount = 150;
+                const maxDistance = 150;
 
-            function setCanvasSize() {
-                canvas.width = window.innerWidth;
-                canvas.height = window.innerHeight;
-                // Update virtual dimensions to match screen proportions
-                VIRTUAL_WIDTH = window.innerWidth;
-                VIRTUAL_HEIGHT = window.innerHeight;
-            }
+                // Virtual canvas size proportional to actual screen width
+                let VIRTUAL_WIDTH = window.innerWidth;
+                let VIRTUAL_HEIGHT = window.innerHeight;
+
+                function setCanvasSize() {
+                    canvas.width = window.innerWidth;
+                    canvas.height = window.innerHeight;
+                    // Update virtual dimensions to match screen proportions
+                    VIRTUAL_WIDTH = window.innerWidth;
+                    VIRTUAL_HEIGHT = window.innerHeight;
+                }
 
             class Particle {
                 constructor() {
@@ -1315,6 +1328,7 @@
             initParticles();
             animate();
         })();
+        } // End of if (!isMobile)
 
         // ============================================================
         // Hero Animation Trigger
