--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <meta name="description" content="페블러스는 눈에 보이지 않는 데이터의 우주를 탐험하고, 그 본질을 만질 수 있는 형태로 바꾸어 새로운 문화와 가치를 창조합니다. AI 데이터 품질관리, 데이터 아트, 그리고 데이터 스토리를 만나보세요.">
     <meta name="keywords" content="Pebblous, 페블러스, Data Clinic, PebbloScope, AI, Data Quality, Data Art, 데이터 품질, 데이터 아트, 소버린 AI, 피지컬 AI">
     <meta name="author" content="Pebblous Inc.">
+    <meta name="language" content="Korean">
+    <meta name="copyright" content="© 2024 Pebblous Inc. All rights reserved.">
     <meta name="robots" content="index, follow">
+    <meta http-equiv="content-language" content="ko">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://blog.pebblous.ai/">
@@ -20,22 +23,101 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Pebblous Blog: Where Data Becomes Tangible">
     <meta property="og:description" content="페블러스는 눈에 보이지 않는 데이터의 우주를 탐험하고, 그 본질을 만질 수 있는 형태로 바꾸어 새로운 문화와 가치를 창조합니다.">
-    <meta property="og:image" content="https://blog.pebblous.ai/image/Pebblous_BM_Orange_RGB.png">
+    <meta property="og:image" content="https://blog.pebblous.ai/image/index.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Pebblous Blog - Where Data Becomes Tangible">
     <meta property="og:site_name" content="Pebblous Blog">
+    <meta property="og:locale" content="ko_KR">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://blog.pebblous.ai/">
+    <meta name="twitter:site" content="@pebblous">
+    <meta name="twitter:creator" content="@pebblous">
     <meta name="twitter:title" content="Pebblous Blog: Where Data Becomes Tangible">
     <meta name="twitter:description" content="페블러스는 눈에 보이지 않는 데이터의 우주를 탐험하고, 그 본질을 만질 수 있는 형태로 바꾸어 새로운 문화와 가치를 창조합니다.">
-    <meta name="twitter:image" content="https://blog.pebblous.ai/image/Pebblous_BM_Orange_RGB.png">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/image/index.png">
+    <meta name="twitter:image:alt" content="Pebblous Blog - Where Data Becomes Tangible">
 
     <!-- Favicon -->
     <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
     <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Pebblous Blog",
+      "alternateName": "페블러스 블로그",
+      "url": "https://blog.pebblous.ai",
+      "description": "페블러스는 눈에 보이지 않는 데이터의 우주를 탐험하고, 그 본질을 만질 수 있는 형태로 바꾸어 새로운 문화와 가치를 창조합니다.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Pebblous Inc.",
+        "url": "https://www.pebblous.ai",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://www.pebblous.ai/image/Pebblous_BM_Orange_RGB.png",
+          "width": 600,
+          "height": 60
+        },
+        "sameAs": [
+          "https://www.facebook.com/Pebblous",
+          "https://www.linkedin.com/company/pebblous",
+          "https://www.instagram.com/pebblous/",
+          "https://github.com/pebblous"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+82-44-589-3824",
+          "contactType": "Customer Service",
+          "email": "contact@pebblous.ai",
+          "areaServed": "KR",
+          "availableLanguage": ["Korean", "English"]
+        }
+      },
+      "inLanguage": "ko-KR",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://blog.pebblous.ai/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
+    <!-- Organization Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Pebblous Inc.",
+      "alternateName": "페블러스",
+      "url": "https://www.pebblous.ai",
+      "logo": "https://www.pebblous.ai/image/Pebblous_BM_Orange_RGB.png",
+      "description": "Pebblous는 AI 기반 데이터 품질관리 솔루션 Data Clinic™과 데이터 탐색 도구 PebbloScope™를 제공하는 딥테크 기업입니다.",
+      "foundingDate": "2020",
+      "sameAs": [
+        "https://www.facebook.com/Pebblous",
+        "https://www.linkedin.com/company/pebblous",
+        "https://www.instagram.com/pebblous/",
+        "https://github.com/pebblous",
+        "https://blog.pebblous.ai"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "KR",
+        "addressRegion": "South Korea"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+82-44-589-3824",
+        "contactType": "Customer Service",
+        "email": "contact@pebblous.ai"
+      }
+    }
+    </script>
 
     <!-- RSS Feed -->
     <link rel="alternate" type="application/rss+xml" title="Pebblous Blog RSS Feed" href="https://blog.pebblous.ai/rss.xml">
