--- a/index.html
+++ b/index.html
@@ -152,33 +152,79 @@
         .accent-bg { background-color: #F86825; }
         .accent-border { border-color: #F86825; }
         .card {
-            background: linear-gradient(135deg, rgb(30, 41, 59) 0%, rgb(15, 23, 42) 100%) !important;
-            border: 1px solid #1e293b;
+            background: linear-gradient(135deg, rgba(30, 41, 59, 0.6) 0%, rgba(15, 23, 42, 0.6) 100%) !important;
+            border: 1px solid rgba(71, 85, 105, 0.3);
             padding-bottom: 0.375rem;
-            transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease, border-color 0.3s ease, opacity 0.3s ease;
-            opacity: 0.7 !important;
+            transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease, border 0.3s ease;
+            will-change: transform;
+            backface-visibility: hidden;
         }
         .card:hover {
-            transform: translateY(-8px);
+            transform: translateY(-8px) translateZ(0);
             box-shadow: 0 0 40px rgba(248, 104, 37, 0.15);
-            background: linear-gradient(135deg, rgb(30, 41, 59) 0%, rgb(15, 23, 42) 100%);
-            border-color: rgba(71, 85, 105, 0.6);
+            background: linear-gradient(135deg, rgba(30, 41, 59, 0.95) 0%, rgba(15, 23, 42, 0.95) 100%) !important;
+            border: 2px solid rgba(71, 85, 105, 0.6);
+        }
+
+        /* Card title has slight transparency */
+        .card h3,
+        .card .text-xl.font-bold {
+            opacity: 0.9;
+            transition: opacity 0.3s ease;
+        }
+
+        /* Card content has lower opacity */
+        .card .text-slate-400,
+        .card .text-slate-500 {
+            opacity: 0.6;
+            transition: opacity 0.3s ease;
+        }
+
+        .card .tag {
+            opacity: 0.8;
+            transition: opacity 0.3s ease;
+        }
+
+        .card:hover h3,
+        .card:hover .text-xl.font-bold,
+        .card:hover .text-slate-400,
+        .card:hover .text-slate-500,
+        .card:hover .tag {
+            opacity: 1;
+        }
+
+        /* Card image area - higher transparency */
+        .card img:not([src*="Pebblous_BM"]) {
+            opacity: 0.4;
+            transition: opacity 0.3s ease;
+        }
+
+        .card:hover img:not([src*="Pebblous_BM"]) {
+            opacity: 1;
+        }
+
+        /* Logo image container - transparent background to show particles */
+        .card .bg-slate-800 {
+            background-color: rgba(30, 41, 59, 0.1) !important;
+            transition: background-color 0.3s ease;
+        }
+
+        .card:hover .bg-slate-800 {
+            background-color: rgba(30, 41, 59, 0.8) !important;
+        }
+
+        /* Logo stays opaque */
+        .card img[src*="Pebblous_BM_Orange_RGB.png"] {
             opacity: 1 !important;
         }
         .fade-in {
             opacity: 0;
             transform: translateY(20px);
-            animation: fadeInAnimation 0.8s forwards;
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
         }
-        @keyframes fadeInAnimation {
-            to {
-                opacity: 1 !important;
-                transform: translateY(0);
-            }
-        }
-        .fade-in.animate,
-        .card.fade-in {
-            animation-fill-mode: forwards;
+        .fade-in.visible {
+            opacity: 1;
+            transform: translateY(0);
         }
         .tag {
             background-color: rgba(248, 104, 37, 0.1);
@@ -260,6 +306,18 @@
             transform: scale(1);
         }
 
+        /* Card image container */
+        .card img {
+            transition: all 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        /* Card hover - zoom center to crop text areas */
+        .card:hover img:not([src*="Pebblous_BM_Orange_RGB.png"]),
+        .card.touch-active img:not([src*="Pebblous_BM_Orange_RGB.png"]) {
+            transform: scale(1.8);
+            object-position: center center !important;
+        }
+
         /* Icon Button Styles */
         .icon-button {
             display: flex;
@@ -330,6 +388,7 @@
             z-index: -1;
             opacity: 0.6;
             pointer-events: none;
+            will-change: auto;
         }
 
         /* Hide particle canvas on mobile */
@@ -510,8 +569,9 @@
         <!-- Posts Section -->
         <section id="posts" class="container mx-auto px-6 py-20">
             <!-- Categories will be dynamically loaded -->
-            <div id="art" class="mb-20">
-                <h2 id="art-title" class="text-3xl font-bold text-white mb-8 border-l-4 accent-border pl-4">
+            <div id="art" class="mb-20 mt-32 relative">
+                <div class="absolute left-0 w-2 accent-bg" style="height: calc((8rem + 3rem) * 0.75); top: calc(-8rem + 2rem + (8rem + 3rem) * 0.125);"></div>
+                <h2 id="art-title" class="text-3xl font-bold text-white mb-8 border-l-8 accent-border pl-6">
                     <span class="loading-text">Loading...</span>
                 </h2>
                 <div id="art-articles" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -521,8 +581,9 @@
                 </div>
             </div>
 
-            <div id="tech" class="mb-20">
-                <h2 id="tech-title" class="text-3xl font-bold text-white mb-8 border-l-4 accent-border pl-4">
+            <div id="tech" class="mb-20 mt-32 relative">
+                <div class="absolute left-0 w-2 accent-bg" style="height: calc((8rem + 3rem) * 0.75); top: calc(-8rem + 2rem + (8rem + 3rem) * 0.125);"></div>
+                <h2 id="tech-title" class="text-3xl font-bold text-white mb-8 border-l-8 accent-border pl-6">
                     <span class="loading-text">Loading...</span>
                 </h2>
                 <div id="tech-articles" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -532,8 +593,9 @@
                 </div>
             </div>
 
-            <div id="story" class="mb-20">
-                <h2 id="story-title" class="text-3xl font-bold text-white mb-8 border-l-4 accent-border pl-4">
+            <div id="story" class="mb-20 mt-32 relative">
+                <div class="absolute left-0 w-2 accent-bg" style="height: calc((8rem + 3rem) * 0.75); top: calc(-8rem + 2rem + (8rem + 3rem) * 0.125);"></div>
+                <h2 id="story-title" class="text-3xl font-bold text-white mb-8 border-l-8 accent-border pl-6">
                     <span class="loading-text">Loading...</span>
                 </h2>
                 <div id="story-articles" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -754,39 +816,7 @@
             }
         });
 
-        // Load Articles from JSON
-        async function loadArticles() {
-            try {
-                const response = await fetch('articles.json', { cache: 'no-store' });
-                const data = await response.json();
-
-                // Sort function: featured first, then by date
-                const sortArticles = (articles) => {
-                    return articles.sort((a, b) => {
-                        // Featured articles come first
-                        if (a.featured && !b.featured) return -1;
-                        if (!a.featured && b.featured) return 1;
-                        // Then sort by date (newest first)
-                        return new Date(b.date) - new Date(a.date);
-                    });
-                };
-
-                // Filter and group articles by category
-                const artArticles = sortArticles(data.articles.filter(a => a.published && a.category === 'art'));
-                const techArticles = sortArticles(data.articles.filter(a => a.published && a.category === 'tech'));
-                const storyArticles = sortArticles(data.articles.filter(a => a.published && a.category === 'story'));
-
-                // Render articles
-                renderArticles('art-articles', artArticles, 'art');
-                renderArticles('tech-articles', techArticles, 'tech');
-                renderArticles('story-articles', storyArticles, 'story');
-            } catch (error) {
-                console.error('Failed to load articles:', error);
-                ['art-articles', 'tech-articles', 'story-articles'].forEach(id => {
-                    document.getElementById(id).innerHTML = '<p class="text-slate-400 text-center py-10">기사를 불러오는데 실패했습니다.</p>';
-                });
-            }
-        }
+        // Note: loadArticles() function is defined later (Line ~1144) with full implementation including search setup
 
         function renderArticles(containerId, articles, category) {
             const container = document.getElementById(containerId);
@@ -806,28 +836,36 @@
                 const hasModal = article.hasModal || false;
                 const isFeatured = article.featured || false;
 
-                // Check if image is Pebblous logo (default image)
-                const isPebblousLogo = article.image && article.image.includes('Pebblous_BM');
+                // Use cardImage if available and not empty
+                const hasCardImage = article.cardImage && article.cardImage.trim() !== '';
+                const displayImage = hasCardImage ? article.cardImage : null;
+
+                // Check if displaying Pebblous logo
+                const isPebblousLogo = displayImage && displayImage.includes('Pebblous_BM');
 
                 // Featured badge - inline with date
                 const featuredBadge = isFeatured
                     ? `<span class="featured-badge">FEATURED</span>`
                     : '';
 
-                const imageTag = article.image
+                const imageTag = displayImage
                     ? isPebblousLogo
                         ? `<div class="relative w-full h-48 overflow-hidden bg-slate-800 flex items-end justify-end p-4">
-                            <img src="${article.image}" alt="${article.title}"
+                            <img src="${displayImage}" alt="${article.title}"
                                  class="w-auto h-6 object-contain"
                                  loading="lazy">
                            </div>`
                         : `<div class="relative w-full h-48 overflow-hidden bg-slate-900 group/img">
-                            <img src="${article.image}" alt="${article.title}"
-                                 class="w-full h-48 object-cover object-bottom transition-all duration-500 group-hover/img:object-contain group-hover/img:scale-90 rounded-md"
-                                 ${article.imageAnimated ? `data-static="${article.image}" data-animated="${article.imageAnimated}"` : ''}
+                            <img src="${displayImage}" alt="${article.title}"
+                                 class="w-full h-48 object-cover rounded-md"
+                                 ${article.imageAnimated ? `data-static="${displayImage}" data-animated="${article.imageAnimated}"` : ''}
                                  loading="lazy">
                            </div>`
-                    : '';
+                    : `<div class="relative w-full h-48 overflow-hidden bg-slate-800 flex items-end justify-end p-4">
+                        <img src="https://pebblous.github.io/image/Pebblous_BM_Orange_RGB.png" alt="Pebblous Logo"
+                             class="w-auto h-6 object-contain"
+                             loading="lazy">
+                       </div>`;
 
                 const tagsHtml = article.tags.map(tag => `<span class="tag">${tag}</span>`).join('');
                 const tagsScrollHtml = `
@@ -1042,7 +1080,25 @@
         // ============================================================
 
         function initCardInteractions(cards) {
+            // Intersection Observer for fade-in animation
+            const fadeInObserver = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting && !entry.target.classList.contains('visible')) {
+                        entry.target.classList.add('visible');
+                        fadeInObserver.unobserve(entry.target); // Stop observing after animation
+                    }
+                });
+            }, {
+                threshold: 0.1,
+                rootMargin: '0px 0px -50px 0px'
+            });
+
             cards.forEach(card => {
+                // Observe card for fade-in animation
+                if (card.classList.contains('fade-in')) {
+                    fadeInObserver.observe(card);
+                }
+
                 // Tags scroll functionality
                 const container = card.querySelector('.tags-container');
                 const scroll = card.querySelector('.tags-scroll');
@@ -1056,12 +1112,12 @@
                     if (scrollDistance > 0) {
                         card.addEventListener('mouseenter', function onMouseEnter() {
                             scroll.style.transform = `translateX(-${scrollDistance}px)`;
-                            scroll.style.transition = 'transform 0.5s ease-out';
+                            scroll.style.transition = 'transform 2s ease-out';
                         });
 
                         card.addEventListener('mouseleave', function onMouseLeave() {
                             scroll.style.transform = 'translateX(0)';
-                            scroll.style.transition = 'transform 0.5s ease-out';
+                            scroll.style.transition = 'transform 1.5s ease-out';
                         });
                     }
                 }
@@ -1174,6 +1230,20 @@
         }
 
         function updateCategoryTitles() {
+            // SVG icons for categories (monochrome)
+            const categoryIcons = {
+                art: `<svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
+                </svg>`,
+                tech: `<svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path>
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                </svg>`,
+                story: `<svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
+                </svg>`
+            };
+
             // Update each category title with icon and name from articles.json
             Object.keys(categories).forEach(categoryKey => {
                 const category = categories[categoryKey];
@@ -1181,8 +1251,8 @@
 
                 if (titleElement) {
                     titleElement.innerHTML = `
-                        <span class="inline-flex items-center gap-2">
-                            <span class="text-4xl">${category.icon}</span>
+                        <span class="inline-flex items-center gap-3">
+                            ${categoryIcons[categoryKey] || ''}
                             <span>${category.name}</span>
                         </span>
                     `;
@@ -1389,7 +1459,18 @@
                 }
             }
 
-            function animate() {
+            let lastTime = 0;
+            const fps = 30; // Limit to 30 FPS for better performance
+            const interval = 1000 / fps;
+
+            function animate(currentTime) {
+                requestAnimationFrame(animate);
+
+                const elapsed = currentTime - lastTime;
+                if (elapsed < interval) return;
+
+                lastTime = currentTime - (elapsed % interval);
+
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
 
                 particles.forEach(p => {
@@ -1398,7 +1479,6 @@
                 });
 
                 connectParticles();
-                requestAnimationFrame(animate);
             }
 
             window.addEventListener('resize', () => {
